# ResolutionMethod

./: Main.py  README.ipynb  README.md  pyproject.toml  sheet.py
logic/: __init__.py  expressions.py  resolution.py  transformations.py
src/cli/: cli_app.py
src/logic/: __init__.py
tests/: test.py
